Update Namespace and Adding Resources

--- a/private/goexw/goexw/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/private/goexw/goexw/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model goexw.Models.ExternalLoginConfirmationViewModel
+﻿@model Goexw.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
