--- a/private/goexw/goexw/Views/Account/ForgotPassword.cshtml
+++ b/private/goexw/goexw/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model goexw.Models.ForgotPasswordViewModel
+﻿@model Goexw.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
