--- a/private/goexw/goexw/Views/Account/ResetPassword.cshtml
+++ b/private/goexw/goexw/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model goexw.Models.ResetPasswordViewModel
+﻿@model Goexw.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
