--- a/private/goexw/goexw/Views/Account/_SetPasswordPartial.cshtml
+++ b/private/goexw/goexw/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model goexw.Models.ManageUserViewModel
+﻿@model Goexw.Models.ManageUserViewModel
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
