--- a/private/goexw/goexw/Views/Manage/ManageLogins.cshtml
+++ b/private/goexw/goexw/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model goexw.Models.ManageLoginsViewModel
+﻿@model Goexw.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
