--- a/private/goexw/goexw/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/private/goexw/goexw/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model goexw.Models.VerifyPhoneNumberViewModel
+﻿@model Goexw.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
