Revert "Update Namespace and Adding Resources"
This reverts commit f0de0f27a33fdd2ad030e1a8a0c8c9c4f14e866f.

--- a/private/goexw/goexw/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/private/goexw/goexw/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Goexw.Models.ExternalLoginConfirmationViewModel
+﻿@model goexw.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
