--- a/private/goexw/goexw/Views/Account/_ChangePasswordPartial.cshtml
+++ b/private/goexw/goexw/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using Goexw.Models
+﻿@using goexw.Models
 @model Microsoft.AspNet.Identity.ManageUserViewModel
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
