--- a/private/goexw/goexw/Views/Manage/AddPhoneNumber.cshtml
+++ b/private/goexw/goexw/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Goexw.Models.AddPhoneNumberViewModel
+﻿@model goexw.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
