--- a/private/goexw/goexw/Views/Manage/ChangePassword.cshtml
+++ b/private/goexw/goexw/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Goexw.Models.ChangePasswordViewModel
+﻿@model goexw.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
