--- a/private/goexw/goexw/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/private/goexw/goexw/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Goexw.Models.ExternalLoginListViewModel
+﻿@model goexw.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
