Composing Search Component (shared)

--- a/private/goexw/goexw/Views/Shared/_Layout.cshtml
+++ b/private/goexw/goexw/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
             </div>
         </div>
     </div>
+    <div id="SearchPartial" style="width:1024px;">
+        @Html.Partial("_SearchPartial")
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
