--- a/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
+++ b/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Goexw.Resources
 <table width="100%" style="border:0px;margin:0px 0px 10px 0px" cellpadding="0px;" cellspacing="0px">
-    <tr><td style="height:100px;"></td></tr>
+    @*<tr><td style="height:100px;"></td></tr>*@
     <tr>
         <td></td>
         <td colspan="2">
@@ -20,7 +20,7 @@
             </select>
         </td>
         <td style="width:50px;">
-            <a id="doSearch" href="list.html"><img style="width:50px;height:50px; cursor:pointer;" alt="Search" src="./images/search.jpg" /></a>
+            <a id="doSearch" href="list.html"><img style="width:50px;height:50px; cursor:pointer;" alt="Search" src="./Resources/images/search.jpg" /></a>
         </td>
     </tr>
 </table>
