--- a/private/goexw/goexw/Content/jstreethemes/default/style.css
+++ b/private/goexw/goexw/Content/jstreethemes/default/style.css
@@ -411,7 +411,7 @@
 }
 .jstree-default .jstree-node,
 .jstree-default .jstree-icon {
-  background-image: url("32px.png");
+  background-image: url("/Content/jstreethemes/default/32px.png");
 }
 .jstree-default .jstree-node {
   background-position: -292px -4px;
