--- a/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
+++ b/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
@@ -19,7 +19,7 @@
             </select>
         </td>
         <td style="width:50px;">
-            <a id="doSearch" href="list.html"><img style="width:50px;height:50px; cursor:pointer;" alt="Search" src="./Resources/images/search.jpg" /></a>
+            <a id="doSearch" href="list.html"><img style="width:50px;height:50px; cursor:pointer;" alt="Search" src="/Resources/images/search.jpg" /></a>
         </td>
     </tr>
 </table>
