--- a/private/goexw/goexw/Views/Search/Index.cshtml
+++ b/private/goexw/goexw/Views/Search/Index.cshtml
@@ -1,5 +1,6 @@
-﻿<div class="row">
-    <div class="col-md-3" style="background: greenyellow">
+﻿@model List<Goexw.Controllers.SearchController.SearchResult>
+<div class="row">
+    <div class="col-md-3" style="background: lightblue">
         <p>Category tree </p> 
         <p>Category tree </p>
         <p>Category tree </p>
@@ -7,12 +8,17 @@
         <p>Category tree </p>
         <p>Category tree </p>
     </div>
-    <div class="col-md-9" style="background: pink">
-        <p>Search result list</p>
-        <p>Search result list</p>
-        <p>Search result list</p>
-        <p>Search result list</p>
-        <p>Search result list</p>
-        <p>Search result list</p>
+    <div class="col-md-9" style="background: azure">
+        <div class="table">
+            @foreach (var item in Model) { 
+            <div class="row">
+                @item.Title
+            </div>
+            <div class="row">
+                @item.Description
+            </div>
+                <hr />
+            }
+        </div>
     </div>
 </div>
