--- a/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
+++ b/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
@@ -19,11 +19,11 @@
     </div>
   </div>
   <div class="row top_blank_5">
-    <form class="form-inline col-md-10" role="form">
+    @using(@Html.BeginForm("Index", "Search", FormMethod.Get, new {@class="form-inline col-md-10", role="form"} )) {
         <div class="form-group">
             <div class="input-group">
                 <div class="input-group-addon">Keyword: </div>
-                <input type="text" class="form-control" placeholder="products keyword"/>
+                <input id="keyword" name="keyword" type="text" class="form-control" placeholder="products keyword"/>
             </div>
         </div>
         <div class="form-group">
@@ -45,10 +45,10 @@
         </div>
         <div class="form-group">
             <div class="input-group">
-                <a class="btn btn-primary" href="@Url.Action("Index","Search")"><i class="glyphicon glyphicon-search"></i></a>
+                <button onclick="submit()"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div>
-    </form>
+    }
   </div>
 </div>
 
