--- a/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
+++ b/private/goexw/goexw/Views/Shared/_SearchPartial.cshtml
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
             <div class="input-group">
-                <button onclick="submit()"><i class="glyphicon glyphicon-search"></i></button>
+                <button class="btn btn-primary" onclick="submit()"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div>
     }
