Add the elements to the product detail page

--- a/private/goexw/goexw/Content/Site.css
+++ b/private/goexw/goexw/Content/Site.css
@@ -59,3 +59,14 @@ textarea {
 .goexw_cat_fa-trash-o:before {
     content: "x";
 }
+
+
+
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
+.borderless tbody tr td, .borderless thead tr th {
+    border: none !important;
+}
