Update the search category, make it dropdown menu style
Meanwhile, use RenderAction to make it sync request and model-able partial view

--- a/private/goexw/goexw/Views/Shared/_Layout.cshtml
+++ b/private/goexw/goexw/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             </div>
     </div>
     <div id="SearchPartial" class="container">
-        @Html.Partial("_SearchPartial")
+        @{Html.RenderAction("SearchPartial", "Search");}
     </div>
     <div class="container body-content">
         @RenderBody()
