--- a/private/goexw/goexw/Views/Shared/_Layout.cshtml
+++ b/private/goexw/goexw/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/fund")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/applogic")
+    @*@Scripts.Render("~/bundles/applogic")*@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
 </head>
