Remove the search partial from About/Contact/Login page

--- a/private/goexw/goexw/Views/Home/Index.cshtml
+++ b/private/goexw/goexw/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Goexw.Models
 @model List<MockPromotion>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Goexw";
 }
 
 <div class="container" style="border:0px;margin:0px 0px 10px 0px; width:960px" >
