--- a/private/goexw/goexw/Views/Search/SearchPartial.cshtml
+++ b/private/goexw/goexw/Views/Search/SearchPartial.cshtml
@@ -58,7 +58,7 @@
         <div class="form-group">
             <div class="input-group">
                 <div class="input-group-addon">Price: </div>
-                <input type="text" name="price" class="form-control" />
+                <input type="number" name="price" class="form-control text-right" />
                 <div class="input-group-addon">$</div>
             </div>
         </div>
