--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -82,7 +82,7 @@
                     <input type="number" class="form-control" id="quantity" />
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Add to Cart</button>
+            <button class="btn btn-primary" onclick="">Add to Cart</button>
         </form>
 
     </div>
