--- a/private/goexw/goexw/Views/Shared/_LoginPartial.cshtml
+++ b/private/goexw/goexw/Views/Shared/_LoginPartial.cshtml
@@ -16,6 +16,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
+        <li><a href="#" onclick="showCartPanel(); return false;">Shopping Cart</a></li>
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
