--- a/private/goexw/goexw/Views/Shared/_Layout.cshtml
+++ b/private/goexw/goexw/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 <body>
     <script type="text/javascript">
         simpleCart.cartHeaders = ['Image', 'Name', 'Price', 'Quantity_input', 'Total'];
-        simpleCart.add('bid=test','quantity=1', 'name=Black Gold', 'price=58', 'image=images/thumbs/blackGold.jpg');
+        simpleCart.checkoutTo = "Custom";
     </script>
     <div class="navbar navbar-inverse">
         <div class="navbar-header">
