--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -57,7 +57,7 @@
 
     <!-- detail information list -->
     <div class="col-md-4">
-        <h2> Production Name Tile</h2>
+        <h2>House1</h2>
         <table class="table borderless">
             <tbody>
                 <tr>
@@ -66,7 +66,7 @@
                 </tr>
                 <tr>
                     <td>Price:</td>
-                    <td>I am rich!</td>
+                    <td>9000</td>
                 </tr>
                 <tr>
                     <td>Quantity Available:</td>
@@ -82,7 +82,7 @@
                     <input type="number" class="form-control" id="quantity" />
                 </div>
             </div>
-            <button class="btn btn-primary" onclick="">Add to Cart</button>
+            <button class="btn btn-primary" onclick="simpleCart.add('bid=2', 'name=House1', 'price=9000', 'image=/Resources/images/mp1.jpg', 'quantity=1'); showCartPanel(); return false;">Add to Cart</button>
         </form>
 
     </div>
