--- a/private/goexw/goexw/Views/Cart/View.cshtml
+++ b/private/goexw/goexw/Views/Cart/View.cshtml
@@ -141,7 +141,7 @@
     <div>
         <!--Here's the Links to Checkout and Empty Cart-->
         <a class="simpleCart_empty" style="margin-left: 20px;" href="#">Empty Cart</a>
-        <a style="float:right; margin-right: 40px;" href="#">Checkout</a>
+        <a style="float:right; margin-right: 40px;" href="#" onclick="shoppingCartCheckOut()">Checkout</a>
     </div>
     <div style="margin-top: 10px; border-bottom: 2px solid black; text-align: center; padding-bottom: -5px;"><a style="width:100%; text-align:center; font-size: 16px; color: #000;" href="#" onclick="$('#cartPartial').hide(); return false;">^</a></div>
 </div>
